# shuscribe

./: .env.default  .gitignore  CLAUDE.md  README.md  docker-compose.yml  shuscribe.code-workspace
backend/: .env.example  CLAUDE-backend.md  CLAUDE.md  Dockerfile  Dockerfile.backup  GEMINI.md  PLAN.md  README.md  alembic.ini  coverage.xml  pyproject.toml  railway-deploy.md  railway.toml  run-dev.sh
backend/_docs/: database.md  db_implementation.md  wikigen-workflow.md
backend/alembic/: env.py
backend/examples/: flexible_story_loading.py
backend/migrations/: env.py
backend/notebooks/: README.md  llm_pipeline.ipynb  llm_pipeline_test.ipynb  llm_service_test.ipynb  llm_workflow.ipynb
backend/scripts/: README_import.md  import_story.py  migrate_user_ownership.py  seed_database.py  verify_import.py
backend/shuscribe/: main.py  pyproject.toml  utils.py
backend/shuscribe/api/: router.py
backend/shuscribe/api/endpoints/: auth.py  llm.py  pipeline.py
backend/shuscribe/auth/: client.py  dependencies.py
backend/shuscribe/core/: config.py
backend/shuscribe/db/: session.py
backend/shuscribe/db/models/: database.py
backend/shuscribe/schemas/: auth.py  base.py  llm.py  pipeline.py  provider.py  session.py  streaming.py  user.py
backend/shuscribe/schemas/wikigen/: article.py  entity.py  summary.py  wiki.py
backend/shuscribe/services/: auth.py
backend/shuscribe/services/llm/: errors.py  factory.py  interfaces.py  session.py  streaming.py
backend/shuscribe/tasks/: llm_tasks.py
backend/src/: config.py  main.py
backend/src/agents/: base_agent.py
backend/src/agents/wikigen/: __init__.py  arc_splitter.py  article_writer.py  article_writer_agent.py  chapter_backlinker.py  general_summarizer.py  orchestrator.py  planner_agent.py  wikigen_orchestrator.py
backend/src/api/: dependencies.py
backend/src/api/v1/: router.py
backend/src/core/: constants.py  encryption.py  exceptions.py  logging.py  middleware.py  security.py  story_loading.py  story_workspace.py
backend/src/core/llm/: catalog.py
backend/src/database/: __init__.py  base.py  connection.py  example_usage.py  factory.py  models.py  repositories.py  seed.py  seeder.py  supabase_connection.py
backend/src/database/file/: __init__.py  encryption.py  story.py  user.py  utils.py  wiki.py  workspace.py
backend/src/database/interfaces/: __init__.py  agent_repository.py  document_repository.py  file_tree_repository.py  project_repository.py  story.py  story_repository.py  tag_repository.py  user.py  user_repository.py  wiki.py  wiki_repository.py  workspace.py  workspace_repository.py  writing_repository.py
backend/src/database/memory/: __init__.py  agent_repository.py  story_repository.py  user_repository.py  wiki_repository.py  workspace_repository.py  writing_repository.py
backend/src/database/models/: __init__.py  repositories.py  story.py  wiki.py  workspace.py
backend/src/database/repositories/: __init__.py  base.py  user.py  user_in_memory.py  user_supabase.py
backend/src/prompts/: __init__.py  prompt_loader.py  prompt_manager.py  wikigen.toml
backend/src/prompts/wikigen/: planning.toml
backend/src/schemas/: __init__.py  base.py  llm.py  story.py  user.py  wiki.py
backend/src/services/: __init__.py
backend/src/utils/: __init__.py  catalog.py  encryption.py  json_cleaner.py  json_schema_resolver.py  logging.py  story_loader.py  token_estimator.py
backend/supabase/: README.md
backend/supabase/migrations/: 001_initial_schema.sql
backend/tests/: conftest.py
backend/tests/integration/: test_auth_api.py
backend/tests/test_api/: test_document_schema_validation.py  test_documents.py  test_health.py  test_projects.py
backend/tests/test_database/: README.md  conftest.py  test_document_repository.py  test_factory.py  test_file_tree_repository.py  test_project_repository.py  test_runner.py  test_story_repository.py  test_user_repository.py  test_wiki_repository.py  test_workspace_repository.py
backend/tests/test_integration/: test_workflows.py
backend/tests/test_repositories/: TESTING_PLAN.md  test_integration.py  test_story_repository.py  test_wiki_repository.py
(+328 files in other folders)
